--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         <p>
             More HTML content will be added here later.<br/>
-            Thanks for visiting.
+            Thanks for visiting. Be right back.
         </p>
     </body>
 </html>
