--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
             More HTML content will be added here later.<br/>
             Thanks for visiting. Be right back.
         </p>
+        <p><img src="https://avatars1.githubusercontent.com/u/55743269?v=4"></p>
     </body>
 </html>
