--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <head><title>Welcome to the intro-html project</title></head>
+    <head>
+        <title>Welcome to the intro-html project</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <h1>Introduction</h1>
         <p>Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a></p>
