--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             Thanks for visiting. Be right back.
         </p>
         <p><img src="https://avatars1.githubusercontent.com/u/55743269?v=4"></p>
+        <small>HTML codes have been readjusted to meet the requirement of <a href="https://validator.w3.org/nu/?showsource=yes&doc=https://alexoah.github.io/intro-html">Validator</a> results.</small>
     </body>
 </html>
