--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
         <title>Welcome to the intro-html project</title>
@@ -22,7 +23,7 @@
             More HTML content will be added here later.<br/>
             Thanks for visiting. Be right back.
         </p>
-        <p><img src="https://avatars1.githubusercontent.com/u/55743269?v=4"></p>
+        <p><a href="https://alexoah.deviantart.com"><img src="https://avatars1.githubusercontent.com/u/55743269?v=4" alt="alexoah.deviantart.com"></a></p>
         <small>HTML codes have been readjusted to meet the requirement of <a href="https://validator.w3.org/nu/?showsource=yes&doc=https://alexoah.github.io/intro-html">Validator</a> results.</small>
     </body>
 </html>
