--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     </head>
     <body>
         <h1>Introduction</h1>
-        <p>Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a></p>
-        
-        Some links to check out:
+        Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a>
+        Some links to check out:<br/><br/>
         <ul>
             <li><a href="http://overapi.com">OverAPI.com</a><br/>Collection of all Cheat Sheets</li>
             <li><a href="https://www.theodinproject.com/home">The Odin Project</a>, for anyone who wants to work as a web developer, do freelancing work, build a startup, or just hack together a homepage for yourself.</li>
@@ -18,12 +17,10 @@
             <li><a href="https://learntocodewith.me/posts/code-for-free/">71 OF THE BEST PLACES TO LEARN TO CODE FOR FREE</a>, by Learn to Code With Me</li>
             <li><a href="https://github.com/marketplace">GitHub Marketplace</a>, of course!</li>
         </ul>
+        More HTML content will be added here later.<br/>
+        Thanks for visiting. Be right back.<br/><br/>
         
-        <p>
-            More HTML content will be added here later.<br/>
-            Thanks for visiting. Be right back.
-        </p>
-        <p><a href="https://alexoah.deviantart.com"><img src="https://avatars1.githubusercontent.com/u/55743269?v=4" alt="alexoah.deviantart.com"></a></p>
+        <a href="https://alexoah.deviantart.com"><img src="https://avatars1.githubusercontent.com/u/55743269?v=4" alt="alexoah.deviantart.com"></a><br/>
         <small>HTML codes have been readjusted to meet the requirement of <a href="https://validator.w3.org/nu/?showsource=yes&doc=https://alexoah.github.io/intro-html">Validator</a> results.</small>
     </body>
 </html>
