--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <h1>Introduction</h1>
         <p>
-            Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a>
+            Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a><br/><br/>
+            Here are some links to check out.
         </p>
         <ul>
-            Some links to check out:
             <li><a href="http://overapi.com">OverAPI.com</a><br/>Collection of all Cheat Sheets</li>
             <li><a href="https://www.theodinproject.com/home">The Odin Project</a>, for anyone who wants to work as a web developer, do freelancing work, build a startup, or just hack together a homepage for yourself.</li>
             <li><a href="https://bento.io/tracks">Bento - Learning Tracks</a>, a free full stack web dev curriculum by Bento.io.</li>
