--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
             Tutorial available at: <a href="https://lab.github.com/githubtraining/introduction-to-html">Introduction to HTML</a> by <a href="https://lab.github.com/githubtraining">The GitHub Training Team</a><br/><br/>
             Here are some links to check out.
         </p>
-        <p><ul>
+        <ul>
             <li><a href="http://overapi.com">OverAPI.com</a><br/>Collection of all Cheat Sheets</li>
-            <li><a href="https://www.theodinproject.com/home">The Odin Project</a>, for anyone who wants to work as a web developer, do freelancing work, build a startup, or just hack together a homepage for yourself.</li>
-            <li><a href="https://bento.io/tracks">Bento - Learning Tracks</a>, a free full stack web dev curriculum by Bento.io.</li>
-            <li><a href="https://www.bitdegree.org/learn/">Learn to Code from BitDegree</a></li>
-            <li><a href="https://learntocodewith.me/blog/">Learn to Code With Me</a>, interesting site for coding newbie.</li>
-            <li><a href="https://learntocodewith.me/posts/code-for-free/">71 OF THE BEST PLACES TO LEARN TO CODE FOR FREE</a>, by Learn to Code With Me</li>
-            <li><a href="https://github.com/marketplace">GitHub Marketplace</a>, of course!</li>
+            <li><a href="https://www.theodinproject.com/home">The Odin Project</a></li>
+            <li><a href="https://bento.io/tracks">Learning Tracks by Bento.io</a></li>
+            <li><a href="https://www.bitdegree.org/learn/">Learn to Code by BitDegree</a></li>
+            <li><a href="https://learntocodewith.me/blog/">a blog: Learn to Code With Me</a></li>
+            <li><a href="https://learntocodewith.me/posts/code-for-free/">71 OF THE BEST PLACES TO LEARN TO CODE FOR FREE</a></li>
+            <li><a href="https://github.com/marketplace">GitHub Marketplace</a></li>
         </ul>
-        </p>
         <p>
         More HTML content will be added here later.<br/>
         Thanks for visiting. Be right back.<br/><br/>
